tests/NormalTests/paczka1/small_fuzzy/89923387.err
Error in line 1: SNbETgK A512 99,8
Error in line 12: RKZ S777 60,7
Error in line 15: RKZ A89 44,8
